[package]
name = "top-map"
description = "Sorted map with efficient access at one end"
version = "0.1.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
license = "MIT"
repository = "https://github.com/1tgr/rust-top-map"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 16
lto = "fat"
debug = 1